# Autonomous-Parking-System-with-Carla

./: .gitignore  .gitignore.save  CMakeLists.txt  README.md  astar.py  build.txt  carla_manager.py  carla_utils.py  draw.py  hybrid_astar.py  pid_controller.py  reeds_shepp.py  requirements.txt  run_carla_parking.py  semantic_once_labels.npy  visualization.py
detect_parking_spot/: collect_bev_for_labeling.py  detect_parking_spot.py
results/: result.json
src/: fastbridge.hpp  fastbridge_bind.cpp  fastbridge_cpu.cpp
